// Code generated by entproto. DO NOT EDIT.
syntax = "proto3";

package entpb;

import "google/protobuf/empty.proto";

option go_package = "genomedb/ent/proto/entpb";

message Cds {
  int64 id = 1;

  string seqname = 2;

  int32 start = 3;

  int32 end = 4;

  int32 phase = 5;

  string strand = 6;

  Transcript transcript = 7;
}

message Exon {
  int64 id = 1;

  string seqname = 2;

  int32 start = 3;

  int32 end = 4;

  string strand = 5;

  Transcript transcript = 6;
}

message FivePrimeUtr {
  int64 id = 1;

  string seqname = 2;

  int32 start = 3;

  int32 end = 4;

  string strand = 5;

  Transcript transcript = 6;
}

message Gene {
  string id = 1;

  repeated Transcript transcripts = 2;

  Genome genome = 3;
}

message CreateGeneRequest {
  Gene gene = 1;
}

message GetGeneRequest {
  string id = 1;

  View view = 2;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message UpdateGeneRequest {
  Gene gene = 1;
}

message DeleteGeneRequest {
  string id = 1;
}

message ListGeneRequest {
  int32 page_size = 1;

  string page_token = 2;

  View view = 3;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message ListGeneResponse {
  repeated Gene gene_list = 1;

  string next_page_token = 2;
}

message BatchCreateGenesRequest {
  repeated CreateGeneRequest requests = 1;
}

message BatchCreateGenesResponse {
  repeated Gene genes = 1;
}

message Genome {
  string id = 1;

  int32 codon_table = 2;

  repeated Gene genes = 3;

  repeated Scaffold scaffolds = 4;
}

message CreateGenomeRequest {
  Genome genome = 1;
}

message GetGenomeRequest {
  string id = 1;

  View view = 2;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message UpdateGenomeRequest {
  Genome genome = 1;
}

message DeleteGenomeRequest {
  string id = 1;
}

message ListGenomeRequest {
  int32 page_size = 1;

  string page_token = 2;

  View view = 3;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message ListGenomeResponse {
  repeated Genome genome_list = 1;

  string next_page_token = 2;
}

message BatchCreateGenomesRequest {
  repeated CreateGenomeRequest requests = 1;
}

message BatchCreateGenomesResponse {
  repeated Genome genomes = 1;
}

message Scaffold {
  int64 id = 1;

  string seqname = 2;

  string seq = 3;

  Genome genome = 4;
}

message ThreePrimeUtr {
  int64 id = 1;

  string seqname = 2;

  int32 start = 3;

  int32 end = 4;

  string strand = 5;

  Transcript transcript = 6;
}

message Transcript {
  string id = 1;

  string strand = 2;

  string type = 3;

  string genome_seq = 4;

  string transcript_seq = 5;

  string cds_seq = 6;

  string protein_seq = 7;

  Gene gene = 8;

  repeated Cds cds = 9;

  repeated Exon exon = 10;

  repeated FivePrimeUtr five_prime_utr = 11;

  repeated ThreePrimeUtr three_prime_utr = 12;
}

message CreateTranscriptRequest {
  Transcript transcript = 1;
}

message GetTranscriptRequest {
  string id = 1;

  View view = 2;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message UpdateTranscriptRequest {
  Transcript transcript = 1;
}

message DeleteTranscriptRequest {
  string id = 1;
}

message ListTranscriptRequest {
  int32 page_size = 1;

  string page_token = 2;

  View view = 3;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message ListTranscriptResponse {
  repeated Transcript transcript_list = 1;

  string next_page_token = 2;
}

message BatchCreateTranscriptsRequest {
  repeated CreateTranscriptRequest requests = 1;
}

message BatchCreateTranscriptsResponse {
  repeated Transcript transcripts = 1;
}

service GeneService {
  rpc Create ( CreateGeneRequest ) returns ( Gene );

  rpc Get ( GetGeneRequest ) returns ( Gene );

  rpc Update ( UpdateGeneRequest ) returns ( Gene );

  rpc Delete ( DeleteGeneRequest ) returns ( google.protobuf.Empty );

  rpc List ( ListGeneRequest ) returns ( ListGeneResponse );

  rpc BatchCreate ( BatchCreateGenesRequest ) returns ( BatchCreateGenesResponse );
}

service GenomeService {
  rpc Create ( CreateGenomeRequest ) returns ( Genome );

  rpc Get ( GetGenomeRequest ) returns ( Genome );

  rpc Update ( UpdateGenomeRequest ) returns ( Genome );

  rpc Delete ( DeleteGenomeRequest ) returns ( google.protobuf.Empty );

  rpc List ( ListGenomeRequest ) returns ( ListGenomeResponse );

  rpc BatchCreate ( BatchCreateGenomesRequest ) returns ( BatchCreateGenomesResponse );
}

service TranscriptService {
  rpc Create ( CreateTranscriptRequest ) returns ( Transcript );

  rpc Get ( GetTranscriptRequest ) returns ( Transcript );

  rpc Update ( UpdateTranscriptRequest ) returns ( Transcript );

  rpc Delete ( DeleteTranscriptRequest ) returns ( google.protobuf.Empty );

  rpc List ( ListTranscriptRequest ) returns ( ListTranscriptResponse );

  rpc BatchCreate ( BatchCreateTranscriptsRequest ) returns ( BatchCreateTranscriptsResponse );
}
